Remove test run config setup
This is not needed when testing is delegated to Gradle